# quizit

./: .gitignore
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a6f0b7f8e2c_add_registration_contact_fields.py  5fc7f822c234_create_users.py  aa6d6c221f00_add_events.py  c0c81a72823d_add_posting_starting_and_finishing_.py  dce62fd7ee2b_added_user_roles.py  dd43fe0b8849_add_is_active_to_users.py  e4b6f1d9b2a7_add_event_registrations.py
backend/app/: main.py
backend/app/api/routers/: auth_router.py  event_router.py
backend/app/core/: config.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: __init__.py  event.py  event_registration.py  user.py  user_role.py
backend/app/repos/: __init__.py  auth_repo.py  event_repo.py  registration_repo.py  role_repo.py  user_repo.py
backend/app/schemas/: __init__.py  event_schemas.py  user_schemas.py
backend/app/security/: jwt.py  passwords.py
backend/app/services/: __init__.py  auth_service.py  event_service.py  exceptions.py
backend/app/utils/: __init__.py  get_current_user_dep.py  get_role_dep.py  require_role.py
infra/: docker-compose.yml
